# VKey

./: Cargo.toml  README.md
.cursor/rules/: .mdc
.github/workflows/: build.yml
src/: main.rs
src/core/: config.rs  mod.rs  types.rs  vietnamese_input.rs
src/error/: mod.rs
src/platform/: macos.rs  macos_ext.rs  mod.rs
src/ui/: constants.rs  mod.rs
src/ui/components/: app.rs  dropdown.rs  encoding_selector.rs  input_mode_selector.rs  input_type_selector.rs  mod.rs  switch_keys.rs  vkey_app.rs
