[package]
name = "vkey"
version = "0.1.0"
edition = "2021"
description = "VKey - Vietnamese Input Method Editor for macOS"
authors = ["VKey Team"]

[package.metadata.bundle]
name = "VKey"
identifier = "com.vkey.inputmethod"
version = "0.1.0"
copyright = "Copyright © 2024 VKey Team. All rights reserved."
category = "Productivity"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
vi = "0.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2.0"
core-foundation = "0.9"
cocoa = "0.24"
objc = "0.2"