[package]
name = "vkey"
version = "0.1.0"
edition = "2021"
description = "VKey - Vietnamese Input Method Editor for macOS"
authors = ["VKey Team"]

[package.metadata.bundle]
name = "VKey"
identifier = "com.vkey.inputmethod"
version = "0.1.0"
copyright = "Copyright © 2024 VKey Team. All rights reserved."
category = "Productivity"

[dependencies]
gpui = { git = "https://github.com/zed-industries/zed" }
gpui-component = { git = "https://github.com/longbridge/gpui-component.git", branch = "main"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
vi = "0.8.0"
libc = "0.2.139"
foreign-types = "0.3.2"
bitflags = "1.3.2"
rdev = "0.5.2"
log = "0.4.17"
env_logger = "0.10.0"

[target.'cfg(target_os = "macos")'.dependencies]
accessibility-sys = "0.2.0"
core-foundation = "0.9"
core-graphics = "0.22"
cocoa = "0.24"
objc = "0.2"
objc-foundation = "0.1"
objc_id = "0.1"
accessibility="0.1.6"
auto-launch = "0.5"
once_cell = "1.19"
druid = { features = [
    "image",
    "png",
], git = "https://github.com/huytd/druid", branch = "master" }